<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GTD</string>
    <string name="action_settings">Settings</string>
    <string name="action_process">Process</string>
    <string name="title_activity_item_list">ItemListActivity</string>
    <string name="add_stuff_text">Add stuff...</string>
    <string name="action_sync">Sync</string>
    <string name="add_stuff_hint">Add stuff...</string>
    <string name="title_activity_process">ProcessActivity</string>
    <string name="add_tag_hint">New tag...</string>
    <string name="title_activity_settings">Sync Settings</string>
    <string name="action_export">Export</string>
    <string name="action_export_full">Export (full)</string>

</resources>
