<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_process"
        android:icon="@drawable/ic_menu_archive"
        android:showAsAction="always"
        android:title="@string/action_process">
    </item>
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="always"
        android:title="@string/action_sync">
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_export"/>
    <item
        android:id="@+id/action_export_full"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_export_full"/>

</menu>